Refactorize los test y metodos atreves de las practicas de clean code